# AgentKit

./: .gitignore  Dockerfile  README.md  agent.yaml  agent_app.py  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agentkit/: __init__.py  cli.py  config.py  runner.py  server.py  state.py  ui.py
agentkit/static/: app.js
agentkit/templates/: base.html  index.html
samples/: crewai_agent_sample.py  langchain_standalone_agent.py  langchain_ui_agent.py  minimal_agent.py  startup_research_app.py  ui_showcase.py
tests/: test_smoke.py
